@startuml
!include ../../_common/style.puml

title L2：编解码类图（Wire Codec 与 Payload Serializer 边界）
left to right direction

package "API\nmessage-api" #E3F2FD {
  class MessageEnvelope
  class MessageDestination
  interface MessageSerializer
}

package "Core Codec\ncore.codec" #EDE7F6 {
  class MessageWireCodec
  class JacksonMessageSerializer
}

package "SPI\nmessage-spi" #ECEFF1 {
  class ProviderDestination
  class ProviderSendRequest
  class ProviderInboundMessage
}

MessageWireCodec --> MessageEnvelope
MessageWireCodec --> MessageDestination
MessageWireCodec --> ProviderDestination
MessageWireCodec --> ProviderSendRequest
MessageWireCodec --> ProviderInboundMessage
MessageWireCodec --> MessageSerializer
JacksonMessageSerializer ..|> MessageSerializer

note bottom of MessageWireCodec
MessageWireCodec 负责消息线级协议：
metadata / context / headers / payload bytes。
MessageSerializer 只负责 payload 对象与 byte[]。
end note
@enduml
